Fixed syntax error

--- a/app/_posts/2013-12-23-version-0.7.0-is-out.md
+++ b/app/_posts/2013-12-23-version-0.7.0-is-out.md
@@ -44,7 +44,7 @@ angular.forEach(aspects,function(aspect){
 	}
 });
 ```
-Another feature added to 0.7.0 is Event Aspects. Event aspects are the same concept than command aspects, but they intercept all the command group mapped to an event. When you dispatch and event with commangular you can intercept it and execute some function before the command group starts, after or you can intercept any error throwed in all the execution context for that event.You can see how it works in the documentation [here.](/docs/#event-aspects)
+Another feature added to 0.7.0 is Event Aspects. Event aspects are the same concept that command aspects, but they intercept all the command group mapped to an event. When you dispatch and event with commangular you can intercept it and execute some function before the command group starts, after or you can intercept any error throwed in all the execution context for that event.You can see how it works in the documentation [here.](/docs/#event-aspects)
 
 Some bugs have been fixed on regular expresion matching and some test have been added. In general it is more stable now.
 
